--- a/AprilProject/Home.html
+++ b/AprilProject/Home.html
@@ -36,7 +36,7 @@
             <h2>Advantages of smart irrigation system</h2>
         </div>
         <div class="l-info1">
-            <p>Smart irrigation systems are a combination of an advanced technology of sprinklers with nozzles that improve coverage and irrigation controllers that are watering and water conservation systems that monitor moisture-related conditions on your property and automatically adjust watering to optimal levels.</p>
+            <h2>Smart irrigation systems are a combination of an advanced technology of sprinklers with nozzles that improve coverage and irrigation controllers.</h2>
         </div>
        
             
