--- a/AprilProject/Home.html
+++ b/AprilProject/Home.html
@@ -13,8 +13,8 @@
         <ul>
             <li class="nav-item"><a href="./Home.html">Home</a></li>
             <li class="nav-item"><a href="./iot.html">IOT</a></li>
-<!--             <li class="nav-item"><a href="./status.html">Status</a></li> -->
-            <li class="nav-item"><a href="https://io.adafruit.com/shivvamm/dashboards/project">Status</a></li>
+            <li class="nav-item"><a href="./status.html">Status</a></li>
+<!--             <li class="nav-item"><a href="https://io.adafruit.com/shivvamm/dashboards/project">Status</a></li> -->
             <li class="nav-item"><a href="./about.html">About us</a></li>
             <li class="nav-item"><a href="./contact.html">Contact us</a></li>
             <li class="nav-item">
